<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:background="#E0E0E0"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/tv_step"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_16"
                    android:gravity="right|center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_14" />

            <TextView
                    android:id="@+id/tvResult"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_16"
                    android:height="50dp"
                    android:gravity="right|center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_14" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            style="@style/pading_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:id="@+id/btnBackspace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="150dp"
                android:text="@string/btnbackspace" />

        <Button
                android:id="@+id/btnCE"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="150dp"
                android:text="@string/btnCE" />
    </LinearLayout>

    <LinearLayout
            style="@style/pading_10"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <Button
                android:id="@+id/btn7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="75dp"
                android:text="@string/btn7" />

        <Button
                android:id="@+id/btn8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="75dp"
                android:text="@string/btn8" />

        <Button
                android:id="@+id/btn9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="75dp"
                android:text="@string/btn9" />

        <Button
                android:id="@+id/btnDiv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="75dp"
                android:text="@string/btnDiv" />
    </LinearLayout>

    <LinearLayout
            style="@style/pading_10"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <Button
                android:id="@+id/btn4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="75dp"
                android:text="@string/btn4" />

        <Button
                android:id="@+id/btn5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="75dp"
                android:text="@string/btn5" />

        <Button
                android:id="@+id/btn6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="75dp"
                android:text="@string/btn6" />

        <Button
                android:id="@+id/btnMul"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="75dp"
                android:text="@string/btnMul" />
    </LinearLayout>

    <LinearLayout
            style="@style/pading_10"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <Button
                android:id="@+id/btn1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="75dp"
                android:text="@string/btn1" />

        <Button
                android:id="@+id/btn2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="75dp"
                android:text="@string/btn2" />

        <Button
                android:id="@+id/btn3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="75dp"
                android:text="@string/btn3" />

        <Button
                android:id="@+id/btnAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="75dp"
                android:text="@string/btnAdd" />
    </LinearLayout>

    <LinearLayout
            style="@style/pading_10"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <Button
                android:id="@+id/btn0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="75dp"
                android:text="@string/btn0" />

        <Button
                android:id="@+id/btnC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="75dp"
                android:text="@string/btnC" />

        <Button
                android:id="@+id/btnEqu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="75dp"
                android:text="@string/btnEqu" />

        <Button
                android:id="@+id/btnSub"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="75dp"
                android:text="@string/btnSub" />
    </LinearLayout>

    <Button
            android:id="@+id/btn_clcose"
            style="@style/margin_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="关闭" />
</LinearLayout>